syntax = "proto3";

option csharp_namespace = "Room.API.GrpcServer.Protos";

service RoomGrpcService{
	rpc GetRoomsByIds (GetRoomsByIdsRequest) returns (GetRoomsByIdsResponse);
}

message GetRoomsByIdsRequest{
	repeated int32 ids = 1;
}
message RoomResponse{
	int32 Id = 1;
	string Name=2;
	double Price=3;
	bool IsAvailable=4;
	int32 MaxGuests = 5;
}
message GetRoomsByIdsResponse{
	repeated RoomResponse Rooms=1;
}
